# SonicSearch

./: .gitignore  README.md  env_vars.example 2.sh  env_vars.example.sh  todos.md
SonicSearch/: README.md  bun.lockb  environment.yml  package.json
SonicSearch/src/: App.tsx  styles.css
SonicSearch/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
SonicSearch/src-tauri/src/: clap.rs  main.rs  state.rs
clap_experiment/: clap_experiment.ipynb
clap_export/: README.md  clap_export.ipynb  clap_export.py  clap_feature_extraction_notes.md  my-reduction-feature_extraction_clap.py  requirements.txt
experiments/raw_clap/: raw_clap_experiment.ipynb
experiments/transformer_clap/: transformer_clap_experiment.ipynb
sonicsearch-app/: README.md  bun.lockb  env_vars.example.sh  package.json
sonicsearch-app/icon-src/: app-icon.excalidraw
sonicsearch-app/src/: App.tsx  styles.css
sonicsearch-app/src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
sonicsearch-app/src-tauri/.cargo/: config.toml
sonicsearch-app/src-tauri/.sqlx/: query-04375a3b0289d491562d70c1d21be5732bec45716004bafd5721a84088049bdd.json  query-0e33b8e523844191cbd3a42d9dfee4c4a0b264f6c80552ea4adb3c85a9ea9fc7.json  query-1932ce2b7e8ed7da54230f1a92b4dc7cd90f20a8bd94570efbfb16a2521f5513.json  query-2a5adf81b402f2d4dfb13f572481009722ce9e257348ac15784c1726f9383bc9.json  query-47ad542673918befa9fb9300a096afc0ff2dad2e7216273dbafb75dd9caf7432.json  query-931d69fe803f0ad8f3993b3ce9ab3583fce5e10094f954809f213a40bc53d468.json  query-95336601152711de9025520ed0965ffb56115ced0a547a326aa4b0a03253f173.json  query-a8d90912930444c85f473735912f3db4eb25cbb044f3ba8866659a3e8113c89c.json  query-ce50597aac6eb7cb449537086f3222781a554dd871f2dbfbd8994d2fdc14840c.json  query-d0d226fff9afc8be0661c8be279c30c3ae569aa08330e96f3c2b759fe0bdb516.json  query-ec2ea4667592f6133aa639e82ad0cf7e58316b247414df0479ade04874276b39.json
sonicsearch-app/src-tauri/icons/: icon.icns
sonicsearch-app/src-tauri/migrations/: 20231130013004_initial_migration.down.sql  20231130013004_initial_migration.up.sql  20231204190628_add_paths.down.sql  20231204190628_add_paths.up.sql
sonicsearch-app/src-tauri/src/: audio_index.rs  clap.rs  database.rs  index_paths.rs  main.rs  misc_tests.rs  search.rs  state.rs
sonicsearch-app/src-tauri/src/audio_index/: indexing_status.rs
sonicsearch-app/src-tauri/src/state/: audio_embedder.rs  database.rs
sonicsearch-app/src-tauri/src/state/database/: vector_index.rs
sonicsearch-app/src-tauri/tests/: clap_tests.rs
(+5 files in other folders)
