[package]
name = "sonic_search"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "path-all", "shell-execute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
sqlite-vss = { version = "0.1.1", features = ["download-libs"] }
walkdir = "2.3"
dirs = "5.0.1"
twox-hash = "1.6.3"
anyhow = "1.0"
hf-hub = "0.3.2"
tch = { version = "0.14.0", features = ["download-libtorch"] }
ort = { version = "1.16.2", features = ["coreml", "load-dynamic"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
