[package]
name = "sonic_search"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "path-all", "shell-execute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
walkdir = "2.3"
dirs = "5.0.1"
twox-hash = "1.6.3"
anyhow = "1.0"
ort = { version = "1.16.2", features = ["coreml", "load-dynamic"] }
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-rustls"] }
dotenv_codegen = "0.15.0"
futures = "0.3.29"
mel_spec = "0.2.2"
hound = "3.5.1"
rubato = "0.14.1"
ndarray = "0.15.6"
mel_spec_audio = "0.2.2"
mel_spec_pipeline = "0.2.2"
tokio = { version = "1.34.0", features = ["sync", "rt", "macros"] }
tokenizers = "0.15.0"
log = "0.4.20"
hnsw_rs = "0.2.0"
env_logger = "0.10.1"
specta = { version = "=2.0.0-rc.7", features = ["chrono"] }
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"] }
chrono = { version = "0.4.31", features = ["serde"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
